--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,90 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@theme {
+
+    --font-primary: "Poppins", "sans serif";
+    --font-body: "Poppins",
+        "sans serif";
+
+    --animate-fade: fadeIn 1s ease-in-out;
+    --animate-fade-out: fadeOut 1s ease-in-out;
+
+    --animate-entrance: entrance 1s ease-in-out;
+
+
+
+    --color-burgundy: #8e0c3a;
+    --color-dark-blue: #00a9e0;
+    --color-medium-blue: #8ed6f6;
+    --color-light-blue: #ccecfc;
+    --color-dark-gray: #54575a;
+    --color-light-burgundy: #D8294B;
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+
+        to {
+            opacity: 1;
+        }
+    }
+
+    @keyframes fadeOut {
+        from {
+            opacity: 1;
+        }
+
+        to {
+            opacity: 0;
+        }
+    }
+
+    @keyframes entrance {
+        from {
+            opacity: 0;
+            translate: 60px;
+
+        }
+
+        to {
+            opacity: 1;
+        }
+
+    }
+}
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+
+    *,
+    ::after,
+    ::before,
+    ::backdrop,
+    ::file-selector-button {
+        border-color: var(--color-gray-200, currentColor);
+    }
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
+#pointer {
+    cursor: pointer;
+}
