--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@
 
 
 
-    --color-burgundy: #8e0c3a;
+    --color-main: #ed6c30;
     --color-dark-blue: #00a9e0;
     --color-medium-blue: #8ed6f6;
     --color-light-blue: #ccecfc;
